--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,9 +1,6 @@
 @use '@angular/material' as mat;
-
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-
 @import "~@angular/material/theming";
 @include mat-core();
 
@@ -19,11 +16,6 @@ $theming-material-components-theme: mat-dark-theme(
 );
 
 @include angular-material-theme($theming-material-components-theme);
-//}
-
-.theme-1 {
-  // use default
-}
 
 .theme-2 {
   $theming-material-components-primary: mat-palette($mat-light-blue);
@@ -39,25 +31,31 @@ $theming-material-components-theme: mat-dark-theme(
   @include angular-material-theme($theming-material-components-theme);
 }
 
-.theme-3 {
-  $theming-material-components-primary: mat-palette($mat-light-green);
-  $theming-material-components-accent: mat-palette($mat-orange, A200, A100, A400);
-  $theming-material-components-warn: mat-palette($mat-red);
-
-  $theming-material-components-theme: mat-dark-theme(
-      $theming-material-components-primary,
-      $theming-material-components-accent,
-      $theming-material-components-warn
-  );
-
-  @include angular-material-theme($theming-material-components-theme);
-}
-
-$custom-typography: mat.define-typography-config($font-family: 'Open Sans');
+$custom-typography: mat.define-typography-config($font-family: 'Montserrat');
 @include mat.core($custom-typography);
 
-:root {
-    --theme-color-primary: #{mat-color($theming-material-components-primary)};
-    --theme-color-accent: #{mat-color($theming-material-components-accent)};
-    --theme-color-warn: #{mat-color($theming-material-components-warn)};
+
+.mat-sidenav-container{
+  background: #0F0F0F !important;
+  border: none;
+}
+
+// truzzt design
+
+.theme-2 .mat-drawer {
+  background: #0F0F0F;
+  border: none;
+}
+
+.theme-2 .mat-toolbar.mat-primary {
+  background: #0F0F0F;
+  display: none;
+}
+
+.theme-2 .mat-card {  
+  background-color: #151515;
+  color: white;
+  height: 320px;
+  width: 320px;
+  transition: background-color 0.3s;
 }
