--- a/src/modules/edc-demo/components/catalog-browser/catalog-browser.component.html
+++ b/src/modules/edc-demo/components/catalog-browser/catalog-browser.component.html
@@ -1,5 +1,5 @@
-<div id="wrapper">
-  <mat-card class="card-list" style="margin-top:2%">
+<div id="wrapper" style="display: -webkit-box;margin-left: 10%">
+  <mat-card class="card-list" style="margin-top:5%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">Volkswagen GIS AG- Local Hazard Information</h1>
     <div>
         <p class="description">
@@ -21,7 +21,7 @@
         </p>
     </div>
   </mat-card>
-  <mat-card class="card-list" style="margin-top:2%">
+  <mat-card class="card-list" style="margin-top:5%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">Volkswagen GIS AG- Local Hazard Information</h1>
     <div>
         <p class="description">
@@ -43,7 +43,7 @@
         </p>
     </div>
   </mat-card>
-  <mat-card class="card-list" style="margin-top:2%">
+  <mat-card class="card-list" style="margin-top:5%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">Volkswagen GIS AG- Local Hazard Information</h1>
     <div>
         <p class="description">
@@ -65,7 +65,9 @@
         </p>
     </div>
   </mat-card>
-  <mat-card class="card-list" style="margin-top:2%">
+</div>
+<div id="wrapper" style="display: -webkit-box;margin-left: 10%">
+  <mat-card class="card-list" style="margin-top:2%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">Volkswagen GIS AG- Local Hazard Information</h1>
     <div>
         <p class="description">
@@ -87,7 +89,7 @@
         </p>
     </div>
   </mat-card>
-  <mat-card class="card-list" style="margin-top:2%">
+  <mat-card class="card-list" style="margin-top:2%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">Volkswagen GIS AG- Local Hazard Information</h1>
     <div>
         <p class="description">
@@ -109,7 +111,7 @@
         </p>
     </div>
   </mat-card>
-  <mat-card class="card-list" style="margin-top:2%">
+  <mat-card class="card-list" style="margin-top:2%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">Volkswagen GIS AG- Local Hazard Information</h1>
     <div>
         <p class="description">
