--- a/src/modules/edc-demo/components/introduction/introduction.component.html
+++ b/src/modules/edc-demo/components/introduction/introduction.component.html
@@ -1,5 +1,5 @@
-<div id="wrapper">
-    <mat-card>
+<div id="wrapper" style="display: -webkit-box;margin-left: 10%">
+    <mat-card style="margin-top:9%;margin-right:5.5%">
     <h1 [style.color]="theme.palette.primary.main">Eclipse Dataspace Connector</h1>
     <div>
         <p class="description">
@@ -28,7 +28,7 @@
         </p>
     </div>
 </mat-card>
-<mat-card>
+<mat-card style="margin-top:9%;margin-right:3%">
     <h1 [style.color]="theme.palette.primary.main">EDC Data Dashboard (this application)</h1>
     <div>
         <p class="description">
